== 1.0.0
* New file format, the old one is converted by doing `pws convert 0.9`
* Password files have now better integrity checks
* Bruteforce protection by using pbkdf2, you can choose the number of iterations (default: 100_000)
* Store and display updated_at timestamp for entries
* Don't rely on Ruby marshalling

== 0.9.2
* Configure your favourite waiting time, password length and password char pool using ENV options
* More flexible command line argument parsing, allows allows overriding of the ENV options
* Show action takes optional regex filter argument
* Creating new safes also creates the directory for them and sets permissions to 0600

== 0.9.1
* Add password confirmation when changing master password

== 0.9.0
* It's working, again! (Sorry for the broken gem version that long time...)
* Cucumber spec suite :D [based on the one by thecatwasnot]
* Ruby 1.9 only
* Colorized output using the paint gem
* Fix an encoding issue
* New redundancy data mechanism (old file format not compatible anymore)
* Uses PWS environment variable to determine the password file location (default is still: ~/.pws)
* Easy namespace support for different password files
* Add ability to rename entry keys
* Remove descriptions (keep it simple)
* Different generate method interface
* Uses SecureRandom instead of rand
* Fix removing passwords
* Lots of little fixes and tweaks
* New default clipboard time: 10 seconds. Another feature: Old clipboard content gets restored after that time

== See gist https://gist.github.com/658494 for older changes