@@ -33,7 +33,7 @@ Feature: Add
     And  I type ""
     Then the output should contain "Master password:"
     And  the output should contain "Please enter a password for github:"
-    And  the output should contain "Cannot add an empty password!"
+    And  the output should contain "Cannot set an empty password!"
     
   Scenario: Try to add a new password for "github" (but the master password is wrong)
     Given A safe exists with master password "my_master_password"
@@ -42,4 +42,14 @@ Feature: Add
     Then the output should contain "Master password:"
     And  the output should contain "NO ACCESS"
     
-  
+  @slow-hack
+  Scenario: Set a new password for "github", this also sets the timestamp
+    Given A safe exists with master password "my_master_password"
+    When I run `pws ls` interactively
+    And  I type "my_master_password"
+    Then the output from "pws ls" should not contain the current date
+    When I run `pws add github github_password` interactively
+    And  I type "my_master_password"
+    And  I run `pws show` interactively
+    And  I type "my_master_password"
+    Then the output from "pws show" should contain the current date
