@@ -60,6 +60,22 @@ Then /^the clipboard should match ([^\/].+)$/ do |expected|
   assert_matching_output(expected, Clipboard.paste) 
 end
 
+Then /^the output should contain the current date$/ do |cmd|
+  assert_partial_output(Time.now.strftime('%y-%m-%d'), all_output)
+end
+
+Then /^the output should not contain the current date$/ do |cmd|
+  assert_no_partial_output(Time.now.strftime('%y-%m-%d'), all_output)
+end
+
+Then /^the output from "([^"]*)" should contain the current date$/ do |cmd|
+  assert_partial_output(Time.now.strftime('%y-%m-%d'), output_from(cmd))
+end
+
+Then /^the output from "([^"]*)" should not contain the current date$/ do |cmd|
+  assert_no_partial_output(Time.now.strftime('%y-%m-%d'), output_from(cmd))
+end
+
 When /^I set env variable "(\w+)" to "([^"]*)"$/ do |var, value|
   ENV[var] = value
 end
